...
    <!-- Empty list -->
    <string name="empty_list_title">Add your first item</string>
    <string name="empty_search_results_title">No result found</string>
    <string name="empty_list_open_extension">Visit web extension</string>
    <string name="empty_list_create_item_button">Create new item</string>
    <!-- Field -->
    <string name="field_title_title">Title</string>
    <string name="field_title_hint">Untitled</string>
    <string name="field_title_required">Title required</string>
    <string name="small_cross_icon_content_description">Small cross icon</string>
    <string name="field_note_title">Note</string>
    <string name="field_note_hint">Add note</string>
    <string name="linked_apps_title">Linked apps</string>
    <!-- Indicator that indicates lack of internet connectivity -->
    <string name="indicator_no_network">Offline</string>
    <!-- Icon content description -->
    <string name="missing_app_icon_content_description">Missing app icon</string>
...
